Fix Nowrap

--- a/app/frontend/scss/style.scss
+++ b/app/frontend/scss/style.scss
@@ -6,7 +6,3 @@
 @import "./layout/horizontal";
 @import "./layout/dark";
 @import "./pages/dashboards";
-
-* {
-  white-space: nowrap;
-}
